Fix category slider's spacing

--- a/src/components/category/styles/Category.scss
+++ b/src/components/category/styles/Category.scss
@@ -1,5 +1,5 @@
 .Category {
   .GameItem {
-    margin-bottom: 8px;
+    margin-block: 8px 16px;
   }
 }
